# dayli

./: .gitignore  README.md  RELEASE_CHECKLIST.md  RELEASE_TEMPLATE.md  database.types.ts  package.json  turbo.json
.github/workflows/: desktop-release.yml
.pm/epics/epic-1/: epic-1-brief.md  epic-1-tracker.md  sprint-01.00-infrastructure-core-setup.md  sprint-01.01-polish.md  sprint-01.01-time-blocks-schedule-view.md  sprint-01.02-tasks-email-decisions.md  sprint-01.025-pure-time-grid-redesign.md  sprint-01.03-chat-interface-polish.md
.pm/epics/epic-2/: epic-2-plan.md  epic-2-tracker.md  sprint-1-foundation-data-layer.md  sprint-1-review.md  sprint-2-ui-components-layout.md  (+3 more)
.pm/planning-docs/: prd.md
.pm/planning_docs/: overview.md
apps/desktop/: eslint.config.js  package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/docs/: package.json
apps/web/: README-REALTIME-UPDATES.md  README.md  database.types.ts  middleware.ts  next.config.js  package.json
docs/: AI-SYSTEM-REFERENCE.md  brainlift.md  prd.md
migrations/: 001_oauth_integration.sql  002_user_preferences.sql  003_tasks_and_schedules.sql  004_pgvector_and_embeddings.sql  005_workflow_states.sql  006_email_backlog_update.sql  007_task_backlog_view.sql  008_consolidate_tasks.sql  009_fix_emails.sql  010_enhance_time_blocks.sql  011-remove-backward-compatibility-views.sql  APPLY_MIGRATION_011.md  README.md
scripts/: README.md  seed-mock-data-migration-notes.md  seed-mock-data.ts
(+389 files in other folders)
